# ECEN404-2026SP-SoundLocalizationRobot5

./: .gitignore  48x36_Engineering Project Showcase_Poster_AccessibleTemplate.pptx  ASearchTEST.cpp  ESP32PCBc[1].PcbDoc  Final_casing.stl  Mecanum_Motor_Controls  PCB_CapstoneArray.PrjPcb  PcbLib[1].PcbLib  README.md  ROBOTSIM21.cpp  Schlib[1].SchLib  Sound Sensor Code (Not final)  Top_layer_base.stl  final_base_layer_reprint.stl  main.cpp  stand_layer_reprint.stl
3DFiles/: Wheel_shaft_actual_final.stl
3V3 Buck Converter/: 3.3V_Buck_Schematic.SchDoc  ECEN_403_Buck_3.3.PrjPcb  PCB2.PcbDoc
5V Buck Converter/: 5V_Buck_Schematic.SchDoc  ECEN_403_Buck_5V.PrjPcb  PCB1.PcbDoc
AudioProcessing/: tdoa_realtime.cpp  tdoa_snapshot.cpp
AudioProcessing/ESP32/esp32-tdoa-firmware/: CMakeLists.txt
AudioProcessing/ESP32/esp32-tdoa-firmware/main/: CMakeLists.txt  idf_component.yml  main.cpp
AudioProcessing/FallSemesterFinal/: CMakeLists.txt  index.html
AudioProcessing/FallSemesterFinal/main/: CMakeLists.txt  main.cpp
AudioProcessing/Testing/: fft.cpp  fft.hpp  tdoa_snapshot.cpp
AudioProcessing/Webapp/: .gitignore  httplib.h  index.html  tdoa_streaming.cpp
ESP32 Files/: 404_ESP_Real[1].PrjPcb  ESP32SchematicPG2[1].SchDoc  ESP32Schematic[1].SchDoc
FinalSystemCode/: main.cpp
NavigationSoftware/: Emptyroom.txt  Hallway.txt  Maze.txt  ReverseTrap.txt  Trap.txt  Ushape.txt  Wokwitestcases2.cpp  diagram.json  test_a_star.cpp  test_map1.txt
